--- a/emacs/emacs.config
+++ b/emacs/emacs.config
@@ -2,7 +2,7 @@
 (add-to-list 'load-path "~/.emacs.d/org-mode/lisp")
 (add-to-list 'load-path "~/.emacs.d/themes/")
 (add-to-list 'load-path "~/.emacs.d/python-mode/")
-(require 'deep-blue-theme)
+(require 'subtle-hacker-theme)
 (require 'python-mode)
 
 (custom-set-variables
